# dtu-02501-adv-dl-cv-generative-augmentations

./: .gitignore  README.md  generate_img2img.sh  generate_variations.sh  pyproject.toml  train.sh  train_aug_advanced.sh  train_aug_advanced_long.sh  train_aug_diffusion.sh  train_aug_instance.sh  train_aug_instance_advanced.sh  train_aug_no.sh  train_aug_simple.sh
src/generative_augmentations/: config.py  train.py
src/generative_augmentations/datasets/: coco.py  datamodule.py  download_coco.py  preprocess.py  transforms.py  variant_dataset.py  variant_generation.py
src/generative_augmentations/models/: deeplab.py  mask_rcnn.py
src/generative_augmentations/utils/: finalplot.py  map.py  metrics.py  plotting.py
