[project]
name = "generative-augmentations"
version = "0.1.0"
description = "Adv. Deep Learning in Computer Vision"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.5",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "lightning>=2.5.1",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.8",
    "pytorch-optimizer>=3.5.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.18",
    "ultralytics>=8.3.102",
    "wandb>=0.19.8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
