[project]
name = "generative-augmentations"
version = "0.1.0"
description = "Adv. Deep Learning in Computer Vision"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "albumentations>=2.0.5",
    "controlnet-aux>=0.0.9",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "lightning>=2.5.1",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.8",
    "pytorch-optimizer>=3.5.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "tyro>=0.9.18",
    "wandb>=0.19.8",
]


# PyTorch from official registry
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
